--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "classnames": "^2.2.6",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-content-loader": "^6.0.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.0"
+  },
+  "devDependencies": {
+    "json-server": "^0.16.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --port 3001 --watch public/db.json"
   },
   "eslintConfig": {
     "extends": [
